<?xml version="1.0"?>
<package>
  <name>coloring_launch</name>
  <version>0.1.0</version>
  <description>
      Coloring Launch
  </description>

  <maintainer email="ZhuangGenghang@foxmail.com">Zhuang Genghang</maintainer>
  <license>GPLv3</license>
  <author>Zhuang Genghang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>

</package>
